--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div id="container">
+    <div id="headerArea">
+      <div id="header"></div>
+      <nav id="navbar">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Coursework</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div id="flex">
+      <aside id="sidebar">
+        <h2>test text</h2>
+        <p>Lorem ipsum something something...</p>
+      </aside>
+      <main>
+        <h1>main text</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </main>
+    </div>
+  </div>
 </body>
 </html>
